certified-eck/es-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    common.k8s.elastic.co/type: elasticsearch
    elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
  name: es-route
  namespace: elastic
spec:
  host: es-route-elastic.apps.os4.devu.ca
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: elasticsearch-sample-es-http
    weight: 100
  wildcardPolicy: None
