certified-eck/kibana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    common.k8s.elastic.co/type: kibana
    kibana.k8s.elastic.co/name: kibana-instance
  name: kibana-route
  namespace: elastic
spec:
  host: kibana-route-elastic.apps.os4.devu.ca
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: kibana-instance-kb-http
    weight: 100
  wildcardPolicy: None
